<?xml version="1.0"?>
<package format="2">
  <name>udp_bridge</name>
  <version>0.0.0</version>
  <description>Bridge arbitrary ROS messages to a defined external IP-Address while only using UDP.</description>

  <author email="dev@finn-thorben.me">Finn-Thorben Sell</author>
  <maintainer email="info@bit-bots.de">Finn-Thorben Sell</maintainer>
  <maintainer email="dev@finn-thorben.me">Hamburg Bit-Bots</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/udp_bridge</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export></export>
</package>
