<?xml version="1.0"?>
<package format="2">
  <name>udp_bridge</name>
  <version>0.0.0</version>
  <description>Bridge arbitrary ROS messages to a defined external IP-Address while only using UDP.</description>

  <maintainer email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</author>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/udp_bridge</url> -->

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <exec_depend>roslib</exec_depend>

  <depend>bitbots_docs</depend>
  <depend>python3-cryptography</depend>

  <test_depend>bitbots_test</test_depend>
  <test_depend>python-hypothesis</test_depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>python3</language>
    </bitbots_documentation>
    <build_type>ament_python</build_type>
  </export>
</package>
